# Relatorio1

./: .gitignore  Relatorio1.sln
Relatorio1/: CMakeLists.txt  Exercicio01.cpp  Exercicio01.h  Exercicio01.txt  Exercicio02.cpp  Exercicio02.h  Exercicio_2_saida_mul_matrix.csv  Matriz.cpp  Matriz.h  Matriz.txt  ReadMe.txt  Relatorio1.cpp  Relatorio1.vcxproj  Relatorio1.vcxproj.filters  Source.cpp  Teste_MAtrix_Class.txt  saida_mul_matrix.csv  stdafx.cpp
Relatorio1/Debug/: vc140.idb
Relatorio1/Debug/Relatorio1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Relatorio1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Relatorio1/x64/Debug/: vc140.idb  vc141.idb
Relatorio1/x64/Debug/Relatorio1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Relatorio1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Relatorio1/x64/Release/Relatorio1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Relatorio1.lastbuildstate  Relatorio1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: Relatorio1.ilk
x64/Release/: Relatorio1.iobj  Relatorio1.ipdb
